<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            style="@style/imag"
            android:src="@drawable/imag" />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/text_title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                style="@style/text_body"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/country" />


            <TextView
                style="@style/text_maine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/location"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/zip_code" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    style="@style/text_rev"
                    android:textStyle="bold"
                    android:text="@string/reviews" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/star"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    style="@style/text_rev"
                    android:textStyle="bold"
                    android:text="@string/evaluation" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:background="@drawable/houre"
                android:text="@string/time" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                style="@style/text_body"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/russian" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_maine"
                android:text="@string/time_day" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>